## Makefile.am -- Process this file with automake to produce a Makefile.in file.

nobase_include_HEADERS= FiniteElement/Element/ElementsManager.ixx                                \
			FiniteElement/ElementManager.hxx					 \
			FiniteElement/ElementsManager.hxx					 \
			FiniteElement/FiniteElement_dir.doc					 \
			FiniteElement/Mesh/Mesh.ixx						 \
			FiniteElement/Mesh.hxx							 \
			FiniteElement/Node/Node.ixx						 \
			FiniteElement/Node/NodesManager.ixx					 \
			FiniteElement/Node.hxx							 \
			FiniteElement/NodesManager.hxx						 \
			FSAlgorithm/swap_ranges.hxx		                                 \
			FSAlgorithm/copy.hxx			                                 \
			FSAlgorithm/generate.hxx		                                 \
			FSAlgorithm/inner_product.hxx		                                 \
			FSAlgorithm/transform.hxx		                                 \
			FSAlgorithm/iota.hxx			                                 \
			FSAlgorithm/min_element.hxx		                                 \
			FSAlgorithm/max_element.hxx		                                 \
			FSAlgorithm/FSAlgorithm.hxx		                                 \
			FSAlgorithm/accumulate.hxx		                                 \
			FSAlgorithm/fill.hxx			                                 \
			FSAlgorithm/for_each.hxx		                                 \
			FSAlgorithm/equal.hxx			                                 \
			Material/OutOfBoundsPolicy.hxx	                                         \
			Material/MechanicalBehaviour.hxx	                                 \
			Material/Lame.hxx			                                 \
			Material/Hill.hxx			                                 \
			Material/Hill.ixx			                                 \
			Material/ThermalBehaviourData.hxx	                                 \
			Material/MaterialException.hxx	                                         \
			Material/IsotropicLinearFourierHookLaw.hxx                               \
			Material/MechanicalBehaviourTraits.hxx                                   \
			Material/ThermalBehaviour.hxx	                                         \
			Material/MechanicalBehaviourData.hxx	                                 \
			Material/MechanicalIntegrationData.hxx                                   \
			Material/IsotropicLinearFourierLaw.hxx                                   \
			Material/ThermoMechanicalBehaviour.hxx                                   \
			Material/BoundsCheck.hxx                                                 \
			Config/Internals/TFELTypesInternals.hxx	                                 \
			Config/Internals/SpatialGradType.hxx	                                 \
			Config/Internals/HeatFluxVectorType.hxx	                                 \
			Config/Internals/InvJacobianType.hxx	                                 \
			Config/Internals/PositionType.hxx	                                 \
			Config/Internals/JacobianType.hxx	                                 \
			Config/Internals/ThermalConductivityMatrixType.hxx                       \
			Config/TFEL_MATH_Config.hxx		                                 \
			Config/TFELTypes.hxx			                                 \
			Config/TFELConfig.hxx			                                 \
			TypeTraits/Promote/Promote.ixx		                                 \
			TypeTraits/BaseType.hxx			                                 \
			TypeTraits/RealPartType.hxx		                                 \
			TypeTraits/IsFundamentalNumericType.hxx	                                 \
			TypeTraits/IsReal.hxx			                                 \
			TypeTraits/IsScalar.hxx			                                 \
			TypeTraits/IsComplex.hxx		                                 \
			TypeTraits/Promote.hxx			                                 \
			TypeTraits/IsAssignableTo.hxx		                                 \
			TypeTraits/IsUnaryOperator.hxx		                                 \
			TypeTraits/IsSafelyReinterpretCastableTo.hxx                             \
			TypeTraits/IsInvalid.hxx		                                 \
			TypeTraits/IsTemporary.hxx		                                 \
			TypeTraits/IsRandomAccessIterator.hxx	                                 \
			Math/Bindings/atlas.hxx                                                  \
			Math/Interpreter/InterpreterCommon.hxx                                   \
			Math/Parser/BinaryFunction.hxx						 \
			Math/Parser/EvaluatorBase.hxx 						 \
			Math/Parser/Negation.hxx						 \
			Math/Parser/BinaryFunction.ixx						 \
			Math/Parser/Expr.hxx          						 \
			Math/Parser/Number.hxx							 \
			Math/Parser/BinaryOperator.hxx						 \
			Math/Parser/BinaryOperator.ixx						 \
			Math/Parser/Function.hxx      						 \
			Math/Parser/Function.ixx      						 \
			Math/Parser/Variable.hxx						 \
			Math/Parser/ExternalCFunction.hxx                                        \
			Math/Parser/ExternalOctaveFunction.hxx                                   \
			Math/Parser/ExternalCastemFunction.hxx                                   \
			Math/Parser/ExternalFunction.hxx                                         \
			Math/Parser/ExternalFunctionManager.hxx                                  \
			Math/Parser/ExternalFunctionExpr.hxx                                     \
			Math/Parser/ExternalFunctionExpr2.hxx                                    \
			Math/Parser/DifferentiatedFunctionExpr.hxx                               \
			Math/Parser/EvaluatorTExpr.hxx 						 \
			Math/Parser/EvaluatorTExpr.ixx 						 \
			Math/Parser/EvaluatorProxy.hxx                                           \
			Math/Parser/EvaluatorProxy.ixx                                           \
			Math/Parser/LogicalExpr.hxx                                              \
			Math/Parser/LogicalExpr.ixx                                              \
			Math/Parser/ConditionalExpr.hxx                                          \
			Math/Parser/EvaluatorFunction.hxx                                        \
			Math/Parser/EvaluatorFunction.ixx                                        \
			Math/Parser/EvaluatorGSLWrapper.hxx                                      \
			Math/Parser/EvaluatorGSLWrapper.ixx                                      \
			Math/Evaluator.hxx 							 \
			Math/Evaluator.ixx 							 \
			Math/Kriging.hxx							 \
			Math/FactorizedKriging.hxx						 \
			Math/Kriging/KrigingDefaultModel1D.hxx					 \
			Math/Kriging/Kriging.ixx						 \
			Math/Kriging/KrigingErrors.hxx						 \
			Math/Kriging/KrigingDefaultNuggetModel.hxx				 \
			Math/Kriging/FactorizedKriging.ixx					 \
			Math/Kriging/KrigingVariable.hxx					 \
			Math/Kriging/KrigingDefaultModel3D.hxx					 \
			Math/Kriging/KrigingDefaultModels.hxx					 \
			Math/Kriging/KrigingDefaultModel2D.hxx					 \
			Math/LUSolve.hxx		                                         \
			Math/LU/LUException.hxx		                                         \
			Math/LU/Permutation.hxx                                                  \
			Math/LU/Permutation.ixx                                                  \
			Math/LU/TinyPermutation.hxx                                              \
			Math/LU/TinyPermutation.ixx                                              \
			Math/LU/TinyMatrixSolve.ixx		                                 \
			Math/LU/LUDecomp.hxx			                                 \
			Math/Newton-Raphson/TinyNewtonRaphson.ixx                                \
			Math/RungeKutta/RungeKutta2.ixx		                                 \
			Math/RungeKutta/RungeKutta4.ixx		                                 \
			Math/RungeKutta/RungeKutta42.ixx		                         \
			Math/RungeKutta/RungeKutta54.ixx		                         \
			Math/Stensor/Internals/StensorChangeBasis.hxx                            \
			Math/Stensor/Internals/StensorExport.hxx                                 \
			Math/Stensor/Internals/StensorExport.ixx                                 \
			Math/Stensor/Internals/StensorComputeEigenValues.hxx                     \
			Math/Stensor/Internals/StensorComputeEigenVectors.hxx                    \
			Math/Stensor/Internals/StensorImport.hxx                                 \
			Math/Stensor/StensorStensorExpr.hxx	                                 \
			Math/Stensor/StensorConcept.hxx		                                 \
			Math/Stensor/StensorNullStorage.hxx	                                 \
			Math/Stensor/StensorConcept.ixx		                                 \
			Math/Stensor/stensor.ixx		                                 \
			Math/Stensor/ScalarStensorExprSpecialisation.ixx                         \
			Math/Stensor/StensorExternalTabStorage.hxx                               \
			Math/Stensor/StensorConceptOperations.hxx                                \
			Math/Stensor/StensorConceptOperations.ixx                                \
			Math/Stensor/ScalarStensorExpr.hxx	                                 \
			Math/Stensor/StensorNegExpr.hxx		                                 \
			Math/Stensor/StensorStaticStorage.hxx	                                 \
			Math/Stensor/StensorSizeToDime.hxx	                                 \
			Math/Stensor/StensorExpr.hxx		                                 \
			Math/Stensor/StensorExternalVoigtStorage.hxx                             \
			Math/Stensor/stensorResultType.hxx	                                 \
			Math/Stensor/StensorStensorExprSpecialisation.ixx                        \
			Math/Stensor/ScalarStensorExprWithoutConstIterator.hxx                   \
			Math/Stensor/StensorNegExprWithoutConstIterator.hxx                      \
			Math/Stensor/StensorStensorExprWithoutConstIteratorSpecialisation.ixx    \
			Math/Stensor/StensorStensorExprWithoutConstIterator.hxx                  \
			Math/Stensor/ScalarStensorExprWithoutConstIteratorSpecialisation.ixx     \
			Math/Stensor/SFTMCV.hxx                                                  \
			Math/Stensor/SFTMRV.hxx                                                  \
			Math/Stensor/SFTVV.hxx                                                   \
			Math/Vector/tvectorResultType.hxx	                                 \
			Math/Vector/VectorNegExpr.hxx		                                 \
			Math/Vector/FctVectorExpr.hxx		                                 \
			Math/Vector/tvector.ixx			                                 \
			Math/Vector/VectorVectorExprSpecialisation.ixx                           \
			Math/Vector/VectorConcept.hxx		                                 \
			Math/Vector/VectorUtilities.hxx		                                 \
			Math/Vector/VectorConcept.ixx		                                 \
			Math/Vector/VectorExpr.hxx		                                 \
			Math/Vector/vector.ixx			                                 \
			Math/Vector/ScalarVectorExprSpecialisation.ixx                           \
			Math/Vector/VectorVectorExpr.hxx	                                 \
			Math/Vector/VectorConceptOperations.hxx	                                 \
			Math/Vector/VectorConceptOperations.ixx	                                 \
			Math/Vector/ScalarVectorExpr.hxx	                                 \
			Math/Vector/vectorResultType.hxx	                                 \
			Math/Vector/Range.hxx			                                 \
			Math/Vector/ScalarVectorExprWithoutConstIterator.hxx                     \
			Math/Vector/VectorVectorExprWithoutConstIterator.hxx                     \
			Math/Vector/VectorNegExprWithoutConstIterator.hxx                        \
			Math/Vector/ScalarVectorExprWithoutConstIteratorSpecialisation.ixx       \
			Math/Vector/FctVectorExprWithoutConstIterator.hxx                        \
			Math/Vector/VectorVectorExprWithoutConstIteratorSpecialisation.ixx       \
			Math/Vector/VectorVectorDiadicProductExpr.hxx                            \
			Math/matrix.hxx                 	                                 \
			Math/Matrix/tmatrixResultType.hxx	                                 \
			Math/Matrix/ScalarMatrixExpr.hxx	                                 \
			Math/Matrix/tmatrix.ixx			                                 \
			Math/Matrix/MatrixNegExpr.hxx		                                 \
			Math/Matrix/FctMatrixExpr.hxx		                                 \
			Math/Matrix/MatrixConcept.hxx		                                 \
			Math/Matrix/MatrixUtilities.hxx		                                 \
			Math/Matrix/MatrixConcept.ixx		                                 \
			Math/Matrix/MatrixExpr.hxx		                                 \
			Math/Matrix/MatrixMatrixExprSpecialisation.ixx                           \
			Math/Matrix/ScalarMatrixExprSpecialisation.ixx                           \
			Math/Matrix/MatrixMatrixExpr.hxx                                  	 \
			Math/Matrix/MatrixConceptOperations.hxx                          	 \
			Math/Matrix/MatrixConceptOperations.ixx                          	 \
			Math/Matrix/ScalarMatrixExprWithoutConstIterator.hxx			 \
			Math/Matrix/ScalarMatrixExprWithoutConstIteratorSpecialisation.ixx       \
			Math/Matrix/MatrixNegExprWithoutConstIterator.hxx		         \
			Math/Matrix/MatrixMatrixExprWithoutConstIteratorSpecialisation.ixx       \
			Math/Matrix/MatrixMatrixExprWithoutConstIterator.hxx			 \
			Math/Matrix/FctMatrixExprWithoutConstIterator.hxx                        \
			Math/Matrix/TMatrixTVectorExpr.hxx                                       \
			Math/Matrix/TVectorTMatrixExpr.hxx                                       \
			Math/General/LogicalOperations.hxx                                       \
			Math/General/StorageTraits.hxx	                                         \
			Math/General/AbsCompare.hxx	                                         \
			Math/General/Abs.hxx      	                                         \
			Math/General/BaseCast.hxx                                                \
			Math/General/CubicRoots.hxx                                              \
			Math/General/floating_point_exceptions.hxx                               \
			Math/General/ResultType.hxx		                                 \
			Math/General/RunTimeCheck.hxx		                                 \
			Math/General/BasicOperations.hxx	                                 \
			Math/General/DotProduct.hxx		                                 \
			Math/General/EmptyRunTimeProperties.hxx	                                 \
			Math/General/ComputeUnaryResult.hxx	                                 \
			Math/General/ComputeBinaryResult.hxx	                                 \
			Math/General/UnaryResultType.hxx	                                 \
			Math/General/ComputeObjectTag.ixx	                                 \
			Math/General/ComputeObjectTag.hxx	                                 \
			Math/General/Complex.hxx		                                 \
			Math/General/Complex.ixx		                                 \
			Math/General/ObjectObjectRandomAccessConstIterator.hxx                   \
			Math/General/NegObjectRandomAccessConstIterator.hxx                      \
			Math/General/ScalarObjectRandomAccessConstIterator.hxx	                 \
			Math/General/ScalarObjectRandomAccessConstIteratorSpecialisation.hxx     \
			Math/General/FctObjectRandomAccessConstIterator.hxx	                 \
			Math/General/ObjectObjectRandomAccessConstIteratorSpecialisation.hxx     \
			Math/Quantity/FracSimplify.ixx		                                 \
			Math/Quantity/qtOperations.ixx		                                 \
			Math/Quantity/qtSamples.hxx		                                 \
			Math/Quantity/qtSpecific.hxx		                                 \
			Math/Quantity/Unit.hxx			                                 \
			Math/Quantity/Unit.ixx			                                 \
			Math/Quantity/UnitSamples.hxx		                                 \
			Math/Quantity/qt.ixx			                                 \
			Math/Quantity/qtLimits.hxx                                               \
			Math/Quantity/FracSimplify.hxx                                           \
			Math/Quantity/qtOperations.hxx                                           \
			Math/Array/Internals/ArraySerialize.hxx	                                 \
			Math/Array/ArrayArrayExpr.hxx	                                         \
			Math/Array/FctArrayExpr.hxx                                              \
			Math/Array/arrayResultType.hxx                                           \
			Math/Array/ArrayExpr.hxx	                                         \
			Math/Array/array.ixx		                                         \
			Math/Array/ArrayArrayExprSpecialisation.ixx                              \
			Math/Array/ArrayRefCountedStorage.hxx	                                 \
			Math/Array/ArrayRowMajorStorage.hxx                                      \
			Math/Array/ArrayRowMajorStorage.ixx                                      \
			Math/Array/ArrayConcept.hxx	                                         \
			Math/Array/ArrayConcept.ixx	                                         \
			Math/Array/ArrayConceptOperations.hxx                                    \
			Math/Array/ScalarArrayExprSpecialisation.ixx                             \
			Math/Array/ArrayRunTimeProperties.hxx	                                 \
			Math/Array/ArrayRunTimeProperties.ixx	                                 \
			Math/Array/ArrayStorage.hxx                                              \
			Math/Array/ScalarArrayExpr.hxx                                           \
			Math/Array/ArrayStorage.ixx                                              \
			Math/Array/ArrayNegExpr.hxx                                              \
			Math/Array/ScalarArrayExprWithoutConstIteratorSpecialisation.ixx         \
			Math/Array/ScalarArrayExprWithoutConstIterator.hxx		         \
			Math/Array/FctArrayExprWithoutConstIterator.hxx                          \
			Math/Array/ArrayNegExprWithoutConstIterator.hxx                          \
			Math/Array/ArrayArrayExprWithoutConstIteratorSpecialisation.ixx    	 \
			Math/Array/ArrayArrayExprWithoutConstIterator.hxx		         \
			Math/qt.hxx				                                 \
			Math/TinyNewtonRaphson.hxx		                                 \
			Math/RungeKutta2.hxx			                                 \
			Math/RungeKutta4.hxx			                                 \
			Math/RungeKutta42.hxx			                                 \
			Math/RungeKutta54.hxx			                                 \
			Math/array.hxx				                                 \
			Math/TinyMatrixSolve.hxx		                                 \
			Math/tvector.hxx			                                 \
			Math/tmatrix.hxx			                                 \
			Math/stensor.hxx			                                 \
			Math/vector.hxx				                                 \
			Math/MathException.hxx			                                 \
			Math/Function/Id.hxx                                                     \
			Math/Function/StandardFunctions.hxx	                                 \
			Math/Function/FunctionConcept.hxx	                                 \
			Math/Function/FunctionConcept.ixx	                                 \
			Math/Function/FunctionExpr.hxx		                                 \
			Math/Function/FunctionConceptOperations.hxx                              \
			Math/Function/FunctionFunctionExpr.hxx	                                 \
			Math/Function/FunctionFunctionExpr.ixx	                                 \
			Math/Function/ScalarFunctionExpr.hxx                                     \
			Math/Function/ScalarFunctionExpr.ixx                                     \
			Math/Function/FunctionScalarExpr.hxx	                                 \
			Math/Function/FunctionScalarExpr.ixx	                                 \
			Math/Function/FunctionsCompositionExpr.hxx                               \
			Math/Function/FunctionsCompositionExpr.ixx                               \
			Math/Function/FunctionNegExpr.hxx                                        \
			Math/Function/FunctionNegExpr.ixx                                        \
			Math/Function/Power.hxx                                                  \
			Math/Function/Cst.hxx	                                                 \
			Math/Function/Cst.ixx	                                                 \
			Math/Function/Power.ixx                                                  \
			Math/LambdaExpression/LambdaConcept.hxx	                                 \
			Math/LambdaExpression/LambdaConcept.ixx	                                 \
			Math/LambdaExpression/LambdaConceptOperations.hxx               	 \
			Math/LambdaExpression/lambda.ixx	                                 \
			Math/LambdaExpression/ScalarLambdaExpr.hxx                               \
			Math/LambdaExpression/LambdaLambdaExpr.hxx                               \
			Math/LambdaExpression/LambdaLambdaExpr.ixx                               \
			Math/LambdaExpression/LambdaScalarExpr.hxx                               \
			Math/LambdaExpression/ScalarLambdaExpr.ixx                               \
			Math/LambdaExpression/LambdaScalarExpr.ixx                               \
			Math/LambdaExpression/FctLambdaExpr.hxx                                  \
			Math/LambdaExpression/FctLambdaExpr.ixx                                  \
			Math/LambdaExpression/LambdaConceptOperations.ixx	                 \
			Math/lambda.hxx				                                 \
			Math/functions.hxx	                                		 \
			Math/st2tost2.hxx                                                        \
			Math/ST2toST2/ST2toST2Concept.hxx                                        \
			Math/ST2toST2/ST2toST2Concept.ixx                                        \
			Math/ST2toST2/st2tost2.ixx                                               \
			Math/ST2toST2/ST2toST2ConceptOperations.hxx                              \
			Math/ST2toST2/ST2toST2ST2toST2ExprSpecialisation.ixx                     \
			Math/ST2toST2/ST2toST2Expr.hxx                                           \
			Math/ST2toST2/st2tost2ResultType.hxx                                     \
			Math/ST2toST2/ST2toST2NegExpr.hxx                                        \
			Math/ST2toST2/ST2toST2ST2toST2Expr.hxx                                   \
			Math/ST2toST2/ST2toST2ST2toST2ExprWithoutConstIterator.hxx               \
			Math/ST2toST2/ScalarST2toST2ExprSpecialisation.ixx                       \
			Math/ST2toST2/ST2toST2ST2toST2ExprWithoutConstIteratorSpecialisation.ixx \
			Math/ST2toST2/ScalarST2toST2Expr.hxx                                     \
			Math/ST2toST2/ScalarST2toST2ExprWithoutConstIterator.hxx                 \
			Math/ST2toST2/ST2toST2NegExprWithoutConstIterator.hxx                    \
			Math/ST2toST2/ScalarST2toST2ExprWithoutConstIteratorSpecialisation.ixx   \
			Math/ST2toST2/ST2toST2FTMV.hxx                                           \
			Math/composite.hxx                                                       \
			Math/Composite/CompositeCompositeExpr.hxx                                \
			Math/Composite/CompositeConceptOperations.ixx                            \
			Math/Composite/CompositeNegExpr.hxx                                      \
			Math/Composite/FctCompositeExpr.hxx                                      \
			Math/Composite/CompositeConcept.hxx                                      \
			Math/Composite/CompositeExpr.hxx                                         \
			Math/Composite/compositeResultType.ixx                                   \
			Math/Composite/ScalarCompositeExpr.hxx                                   \
			Math/Composite/CompositeConcept.ixx                                      \
			Math/Composite/composite.ixx                                             \
			Math/Composite/CompositeScalarExpr.hxx                                   \
			Math/Broyden.hxx                                                         \
			Math/Broyden2.hxx                                                        \
			Math/RootFinding/Broyden.ixx                                             \
			Math/RootFinding/Broyden2.ixx                                            \
			Math/FSLevenbergMarquardt.hxx                                            \
			Math/LevenbergMarquardt/FSLevenbergMarquardt.ixx                         \
			Metaprogramming/GenerateTypeList.ixx                                     \
			Metaprogramming/StaticAssert.hxx                                         \
			Metaprogramming/IsConvertibleTo.hxx                                      \
			Metaprogramming/Implements.hxx	                                         \
			Metaprogramming/TypeList.hxx	                                         \
			Metaprogramming/IF.hxx		                                         \
			Metaprogramming/TypeList.ixx                                             \
			Metaprogramming/IntToType.hxx                                            \
			Metaprogramming/IsSubClassOf.hxx	                                 \
			Metaprogramming/IsSameType.hxx                                           \
			Metaprogramming/EnableIf.hxx	                                         \
			Metaprogramming/IsSuperClassOf.hxx                                       \
			Metaprogramming/GenerateTypeList.hxx                                     \
			Metaprogramming/InvalidType.hxx	                                         \
			Metaprogramming/RemoveConstness.hxx                                      \
			Metaprogramming/HasIterator.hxx	                                         \
			Metaprogramming/HasConstIterator.hxx                                     \
			Metaprogramming/HasRandomAccessConstIterator.hxx	                 \
			Metaprogramming/EmptyClass.hxx    	                                 \
			Metaprogramming/HasRandomAccessIterator.hxx                              \
			System/ExternalFunctionsPrototypes.hxx                                   \
			System/ExternalLibraryManager.hxx                                        \
			System/ProcessManager.h                                                  \
			System/ProcessManager.hxx                                                \
			System/SignalHandler.ixx                                                 \
			System/SystemError.hxx                                                   \
			System/System.hxx                                                        \
			System/SignalHandler.hxx                                                 \
			System/SignalManager.hxx                                                 \
			System/SystemError.ixx                                                   \
			System/ChildProcess.hxx							 \
			System/BinaryRead.hxx							 \
			System/BinaryWrite.hxx							 \
			System/STLContainerBinaryRead.hxx					 \
			System/STLContainerBinaryWrite.hxx					 \
			System/stream_traits.hxx                                                 \
			System/basic_rstream.hxx                                                 \
			System/basic_rstream.ixx                                                 \
			System/basic_wstream.hxx                                                 \
			System/basic_wstream.ixx                                                 \
			System/rstreamView.hxx                                                   \
			System/rstreamView.ixx                                                   \
			System/wstreamView.hxx                                                   \
			System/wstreamView.ixx                                                   \
			System/rfstream.hxx                                                      \
			System/wfstream.hxx                                                      \
			System/getFunction.h                                                     \
			Utilities/ArgumentParserBase.hxx                                         \
			Utilities/ArgumentParserBase.ixx                                         \
			Utilities/CxxKeywords.hxx                                                \
			Utilities/CxxTokenizer.hxx                                               \
		 	Utilities/Token.hxx                                                      \
			Utilities/ContainerRebind.hxx                                            \
			Utilities/MultipleDequeVector/MultipleDequeVector.hxx	                 \
			Utilities/MultipleDequeVector/TypeTransform.hxx                          \
			Utilities/MultipleDequeVector/TypeTransform.ixx                          \
			Utilities/MultipleDequeVector/MultipleDequeVectorIterators.ixx	         \
			Utilities/MultipleDequeVector/MultipleDequeVector.ixx	                 \
			Utilities/NewAllocator.hxx	                                         \
			Utilities/ToString.hxx		                                         \
			Utilities/ToString.ixx		                                         \
			Utilities/SmartPtr.hxx		                                         \
			Utilities/Info.hxx		                                         \
			Utilities/TerminalColors.hxx	                                         \
			Utilities/IntegersSet.hxx	                                         \
			Utilities/MultipleVector.hxx	                                         \
			Utilities/MultipleDeque.hxx	                                         \
			Utilities/Name.hxx		                                         \
			Utilities/Name.ixx			                                 \
			Utilities/GenType.hxx		                                         \
			Utilities/GenType.ixx		                                         \
			Utilities/GenTypeCastError.hxx	                                         \
			Utilities/GenTypeBase.hxx	                                         \
			Utilities/GenTypeBase.ixx	                                         \
			Utilities/GenTypeSpecialisation.ixx                                      \
			Utilities/RecursiveUnion.hxx		                                 \
			Utilities/MallocAllocator.hxx                                            \
			Utilities/Tuple.hxx   	                                                 \
			Utilities/Tuple.ixx                                                      \
			Utilities/TextData.hxx                                                   \
			Exception/TFELException.hxx 

if WITH_GRAPHICS
nobase_include_HEADERS += Graphics/ArrowStyle.hxx	  \
			  Graphics/GraphSize.hxx	  \
			  Graphics/GraphCoordinates.hxx	  \
			  Graphics/Point.hxx		  \
			  Graphics/GraphLayout.hxx	  \
			  Graphics/GraphTheme.hxx	  \
			  Graphics/StandardGraphTheme.hxx \
			  Graphics/EvaluatedCurve.hxx	  \
			  Graphics/DataCurve.hxx	  \
			  Graphics/Graph.hxx		  \
			  Graphics/ThemeManager.ixx	  \
			  Graphics/ThemeManager.hxx	  \
			  Graphics/Curve.hxx              \
			  Graphics/Grid.hxx
endif